# purpleair-python

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
purpleair/: __init__.py  __main__.py  download.py  downloader.py
tests/: test_key_valid.py
